--- a/config.json
+++ b/config.json
@@ -1,15 +1,12 @@
 { 
     "overwrite_health_rules":true,
-    "are_passwords_encoded": true,
-    
+
     "prod_controller_details": [
        {
         "url": "https://customer1.saas.appdynamics.com",
         "username": "configmycustomer1",
         "password":"pass",
-        "server_viz_app_id":"2384",
-        "proxy_url": "",
-        "proxy_port": ""
+        "server_viz_app_id":"2384"
        }
      ],
      
@@ -17,10 +14,8 @@
       {
        "url" : "https://customer1-dev.saas.appdynamics.com",
        "username": "configmyapp@customer1-dev",
-       "password":"***REMOVED***",
-       "server_viz_app_id":"57803",
-       "proxy_url": "",
-       "proxy_port": ""
+       "password":"pass",
+       "server_viz_app_id":"57803"
       }
     ]
    }
