--- a/configBT.json
+++ b/configBT.json
@@ -1,5 +1,4 @@
 { 
-
     "java_pojo_rules": [
        {
         "rule_name": "JavagetStatus",
@@ -27,6 +26,14 @@
         "method_name": "getStatus",
         "method_matching_condition":"CONTAINS",
         "priority":"0"
+       },
+       {
+        "rule_name": "DotNetgetStatus3",
+        "class_name": "com.appdynamics.health.me3",
+        "class_matching_condition":"ENDS_WITH",
+        "method_name": "getStatus",
+        "method_matching_condition":"CONTAINS",
+        "priority":"10"
        }
     ]
    }
