--- a/config.json
+++ b/config.json
@@ -1,26 +1,31 @@
-{ 
-    "overwrite_health_rules":true,
-    "are_passwords_encoded": false,
-    "enable_branding": true,
-    "prod_controller_details": [
-       {
-        "url": "http://controller204-2040noss-rmqbqgqi.appd-cx.com:8090",
-        "username": "username@customer1",
-        "password":"password",
-        "server_viz_app_id":"3",
-        "proxy_url": "",
-        "proxy_port": ""
-       }
-     ],
-     
-     "non_prod_controller_details": [
-      {
-       "url" : "https://customer1-dev.saas.appdynamics.com",
-       "username": "configmyapp@customer1-dev",
-       "password":"***REMOVED***",
-       "server_viz_app_id":"57803",
-       "proxy_url": "",
-       "proxy_port": ""
-      }
-    ]
-   }
+{
+  "overwrite_health_rules": true,
+  "are_passwords_encoded": false,
+  "branding": [
+    {
+      "enabled": false,
+      "logo_path": "./branding/logo.png",
+      "image_background_path": "./branding/background.jpg"
+    }
+  ],
+  "prod_controller_details": [
+    {
+      "url": "http://controller204-2040noss-rmqbqgqi.appd-cx.com:8090",
+      "username": "username@customer1",
+      "password": "password",
+      "server_viz_app_id": "3",
+      "proxy_url": "",
+      "proxy_port": ""
+    }
+  ],
+  "non_prod_controller_details": [
+    {
+      "url": "https://customer1-dev.saas.appdynamics.com",
+      "username": "configmyapp@customer1-dev",
+      "password": "***REMOVED***",
+      "server_viz_app_id": "57803",
+      "proxy_url": "",
+      "proxy_port": ""
+    }
+  ]
+}
