--- a/Setup/Applications/ConfigMyApp/Workflows/ConfigMyAppBuildWorkflow.yaml
+++ b/Setup/Applications/ConfigMyApp/Workflows/ConfigMyAppBuildWorkflow.yaml
@@ -27,15 +27,25 @@ phases:
         host: null
         outputVars: ''
         publishAsVar: false
-        scriptString: echo "Hello world!"
+        scriptString: |-
+          echo "Hello world!"
+          apt-get -y install git
+          git --version
+          echo "Cloning repo..."
+          sudo git clone https://github.com/Appdynamics/ConfigMyApp.git -b features/jenkins_pipeline --single-branch ConfigMyApp2 -u AlexJov:fa64a47df9c0fc8ae6bbff0c77d7ffea14737e24 --bare
+          echo "Cloned"
+          ./ConfigMyApp2/configMyApp.sh TPV no no dev
+          echo "Done."
         scriptType: BASH
         sshKeyRef: null
         sweepingOutputName: null
         sweepingOutputScope: null
         tags: null
         templateExpressions: null
-        templateVariables: ''
-        timeoutMillis: 60000
+        templateUuid: null
+        templateVariables: null
+        templateVersion: null
+        timeoutMillis: 180000
     stepsInParallel: false
   - type: WRAP_UP
     name: Wrap Up
@@ -43,3 +53,10 @@ phases:
   provisionNodes: false
   statefulSet: false
 templatized: false
+userVariables:
+- type: TEXT
+  allowedValues: dev,qa,prod,test
+  fixed: true
+  mandatory: true
+  name: APP_ENVIRONMENT
+  value: dev
