--- a/Setup/Applications/ConfigMyApp/Workflows/ConfigMyAppBuildWorkflow.yaml
+++ b/Setup/Applications/ConfigMyApp/Workflows/ConfigMyAppBuildWorkflow.yaml
@@ -27,16 +27,11 @@ phases:
         host: null
         outputVars: ''
         publishAsVar: false
-        scriptString: |-
-          echo "Hello world!"
-          apt-get -y install git
-          apt-get install sudo -y
-          git --version
-          echo "Cloning repo..."
-          sudo git clone https://github.com/Appdynamics/ConfigMyApp.git -b features/jenkins_pipeline --single-branch ConfigMyApp2 -u AlexJov:fa64a47df9c0fc8ae6bbff0c77d7ffea14737e24 --bare
-          echo "Cloned"
-          ./ConfigMyApp2/configMyApp.sh TPV no no dev
-          echo "Done."
+        scriptString: "echo \"Hello world!\"\napt-get -y install git\ngit --version\n\
+          echo \"Cloning repo...\" \ngit clone https://github.com/Appdynamics/ConfigMyApp.git\
+          \ -b features/jenkins_pipeline --single-branch ConfigMyApp2 -u AlexJov:fa64a47df9c0fc8ae6bbff0c77d7ffea14737e24\
+          \ --bare\necho \"Cloned\"\ncd ~/.ssh\nls\n./ConfigMyApp2/configMyApp.sh\
+          \ TPV no no dev\necho \"Done.\""
         scriptType: BASH
         sshKeyRef: null
         sweepingOutputName: null
