--- a/Setup/Applications/ConfigMyApp/Workflows/ConfigMyAppBuildWorkflow.yaml
+++ b/Setup/Applications/ConfigMyApp/Workflows/ConfigMyAppBuildWorkflow.yaml
@@ -30,8 +30,8 @@ phases:
         scriptString: "echo \"Hello world!\"\napt-get -y install git\ngit --version\n\
           echo \"Cloning repo...\" \ngit clone https://github.com/Appdynamics/ConfigMyApp.git\
           \ -b features/jenkins_pipeline --single-branch ConfigMyApp2 -u AlexJov:fa64a47df9c0fc8ae6bbff0c77d7ffea14737e24\
-          \ --bare\necho \"Cloned\"\ncd ~/.ssh\nls\n./ConfigMyApp2/configMyApp.sh\
-          \ TPV no no dev\necho \"Done.\""
+          \ --bare\necho \"Cloned\"\nwhoami\n./ConfigMyApp2/configMyApp.sh TPV no\
+          \ no dev\necho \"Done.\""
         scriptType: BASH
         sshKeyRef: null
         sweepingOutputName: null
