--- a/Setup/Applications/ConfigMyApp/Workflows/ConfigMyAppBuildWorkflow.yaml
+++ b/Setup/Applications/ConfigMyApp/Workflows/ConfigMyAppBuildWorkflow.yaml
@@ -32,8 +32,8 @@ phases:
           echo \"Cloning repo...\" \ngit config --global credential.helper cache\n\
           git clone https://AlexJov:fa64a47df9c0fc8ae6bbff0c77d7ffea14737e24@github.com/Appdynamics/ConfigMyApp.git\
           \ -b features/jenkins_pipeline --single-branch ConfigMyApp2  --bare\necho\
-          \ \"Cloned\"\nwhoami\n./ConfigMyApp2/configMyApp.sh TPV no no dev\necho\
-          \ \"Done.\""
+          \ \"Cloned\"\nls\nwhoami\ncd ConfigMyApp2\n./configMyApp.sh TPV no no dev\n\
+          echo \"Done.\""
         scriptType: BASH
         sshKeyRef: null
         sweepingOutputName: null
