--- a/Setup/Applications/ConfigMyApp/Workflows/ConfigMyAppBuildWorkflow.yaml
+++ b/Setup/Applications/ConfigMyApp/Workflows/ConfigMyAppBuildWorkflow.yaml
@@ -31,9 +31,9 @@ phases:
           echo \"remote\"\ngit config remote.origin.url https://github.com/Appdynamics/ConfigMyApp.git\n\
           echo \"Cloning repo...\" \ngit config --global credential.helper cache\n\
           git clone https://AlexJov:fa64a47df9c0fc8ae6bbff0c77d7ffea14737e24@github.com/Appdynamics/ConfigMyApp.git\
-          \ -b features/jenkins_pipeline --single-branch ConfigMyApp3  --bare\necho\
-          \ \"Cloned\"\nls\nwhoami\ncd ConfigMyApp3\nls\necho \"Execute script...\"\
-          \n./configMyApp.sh TPV no no dev\necho \"Done.\""
+          \ -b features/jenkins_pipeline --single-branch ConfigMyApp4  --bare\necho\
+          \ \"Cloned\"\nls\nwhoami\necho \"Execute script...\"\n./ConfigMyApp4/configMyApp.sh\
+          \ TPV no no dev\necho \"Done.\""
         scriptType: BASH
         sshKeyRef: null
         sweepingOutputName: null
