--- a/Setup/Applications/ConfigMyApp/Workflows/ConfigMyAppBuildWorkflow.yaml
+++ b/Setup/Applications/ConfigMyApp/Workflows/ConfigMyAppBuildWorkflow.yaml
@@ -31,8 +31,8 @@ phases:
           echo \"remote\"\ngit config remote.origin.url https://github.com/Appdynamics/ConfigMyApp.git\n\
           echo \"Cloning repo...\" \ngit config --global credential.helper cache\n\
           git clone https://AlexJov:fa64a47df9c0fc8ae6bbff0c77d7ffea14737e24@github.com/Appdynamics/ConfigMyApp.git\
-          \ -b features/jenkins_pipeline --single-branch ConfigMyApp5  --bare\necho\
-          \ \"Cloned\"\nls\nwhoami\ncd ConfigMyApp5\nexec bash\necho \"Execute script...\"\
+          \ -b features/jenkins_pipeline --single-branch ConfigMyApp6\necho \"Cloned\"\
+          \nls\nwhoami\ncd ConfigMyApp6\nexec bash\nls\necho \"Execute script...\"\
           \n./configMyApp.sh TPV no no dev\necho \"Done.\""
         scriptType: BASH
         sshKeyRef: null
