--- a/Setup/Applications/ConfigMyApp/Workflows/ConfigMyAppBuildWorkflow.yaml
+++ b/Setup/Applications/ConfigMyApp/Workflows/ConfigMyAppBuildWorkflow.yaml
@@ -32,10 +32,10 @@ phases:
           echo \"remote\"\ngit config remote.origin.url https://github.com/Appdynamics/ConfigMyApp.git\n\
           echo \"Cloning repo...\" \ngit config --global credential.helper cache\n\
           git clone https://AlexJov:fa64a47df9c0fc8ae6bbff0c77d7ffea14737e24@github.com/Appdynamics/ConfigMyApp.git\
-          \ -b features/jenkins_pipeline --single-branch ConfigMyApp8\necho \"Cloned\"\
-          \nls\nwhoami\nls ./ConfigMyApp8 \necho \"Execute script...\"\nchmod 755\
-          \ ./ConfigMyApp8/configMyApp.sh\n./ConfigMyApp8/configMyApp.sh TPV no no\
-          \ dev\necho \"Done.\""
+          \ -b features/jenkins_pipeline --single-branch ConfigMyApp9\necho \"Cloned\"\
+          \nls\nwhoami\nls ./ConfigMyApp9\necho \"Execute script...\"\nchmod 755 ./ConfigMyApp9/configMyApp.sh\n\
+          chmod 755 ./ConfigMyApp9/config.json\n./ConfigMyApp9/configMyApp.sh TPV\
+          \ no no dev\necho \"Done.\""
         scriptType: BASH
         sshKeyRef: null
         sweepingOutputName: null
