--- a/Setup/Applications/ConfigMyApp/Workflows/ConfigMyAppBuildWorkflow.yaml
+++ b/Setup/Applications/ConfigMyApp/Workflows/ConfigMyAppBuildWorkflow.yaml
@@ -27,15 +27,16 @@ phases:
         host: null
         outputVars: ''
         publishAsVar: false
-        scriptString: "#!/usr/bin/env bash\necho \"Hello world!\"\napt-get -y install\
-          \ git\napt-get -y install jq\napt-get -y install -f \ngit --version\nuname\
-          \ -m\necho \"remote\"\ngit config remote.origin.url https://github.com/Appdynamics/ConfigMyApp.git\n\
+        scriptString: "#!/bin/bash\necho \"Hello world!\"\napt-get -y install git\n\
+          apt-get -y install jq\napt-get -y install -f \ngit --version\nuname -m\n\
+          echo \"remote\"\ngit config remote.origin.url https://github.com/Appdynamics/ConfigMyApp.git\n\
           echo \"Cloning repo...\" \ngit config --global credential.helper cache\n\
           git clone https://AlexJov:fa64a47df9c0fc8ae6bbff0c77d7ffea14737e24@github.com/Appdynamics/ConfigMyApp.git\
-          \ -b features/jenkins_pipeline --single-branch ConfigMyApp11\necho \"Cloned\"\
-          \nls\nwhoami\nls ./ConfigMyApp10\necho \"Execute script...\"\nchmod 775\
-          \ ./ConfigMyApp11/configMyApp.sh\nchmod 775 ./ConfigMyApp11/config.json\n\
-          ./ConfigMyApp11/configMyApp.sh TPV no no dev\necho \"Done.\""
+          \ -b features/jenkins_pipeline --single-branch ConfigMyApp12\necho \"Cloned\"\
+          \nls\nwhoami\nls ./ConfigMyApp12\necho \"Execute script...\"\nchmod 775\
+          \ ./ConfigMyApp12/configMyApp.sh\nchmod 775 ./ConfigMyApp12/config.json\n\
+          chmod +x ./ConfigMyApp12/config.json\ncat ./ConfigMyApp12/config.json\n\
+          ./ConfigMyApp12/configMyApp.sh TPV no no dev\necho \"Done.\""
         scriptType: BASH
         sshKeyRef: null
         sweepingOutputName: null
