--- a/configBT.json
+++ b/configBT.json
@@ -1,39 +1,55 @@
 { 
     "java_pojo_rules": [
        {
-        "rule_name": "JavagetStatus",
-        "class_name": "com.appdynamics.health",
+        "include_or_exclude_rule": "exclude",
+        "rule_name": "getStatus_test",
+        "class_name": "com.appdynamics.health.Class",
         "class_matching_condition":"STARTS_WITH",
         "method_name": "getStatus",
         "method_matching_condition":"EQUALS",
-        "priority":"0"
+        "priority":"10"
        }
      ],
 
      "dotnet_poco_rules": [
       {
-        "rule_name": "DotNetgetStatus",
-        "class_name": "com.appdynamics.health",
+        "include_or_exclude_rule": "INCLUDE",
+        "rule_name": "GetMQTopic_test",
+        "class_name": "Services.IO.DequeueSync",
         "class_matching_condition":"STARTS_WITH",
-        "method_name": "getStatus",
+        "method_name": "GetMQTopic",
         "method_matching_condition":"EQUALS",
         "priority":"0"
        },
        {
-        "rule_name": "DotNetgetStatus2",
-        "class_name": "2com.appdynamics.health",
+        "include_or_exclude_rule": "EXCLUDE",
+        "rule_name": "UserLogin",
+        "class_name": "AppD.Ecom.AuthNTest",
         "class_matching_condition":"STARTS_WITH",
-        "method_name": "getStatus",
+        "method_name": "Login",
         "method_matching_condition":"CONTAINS",
         "priority":"0"
-       },
-       {
-        "rule_name": "DotNetgetStatus3",
-        "class_name": "com.appdynamics.health.me3",
-        "class_matching_condition":"ENDS_WITH",
-        "method_name": "getStatus",
-        "method_matching_condition":"CONTAINS",
-        "priority":"10"
        }
-    ]
+    ],
+
+     "dotnet_asp_rules": [
+      {
+       "include_or_exclude_rule": "Include",
+       "rule_name": "ASPLogin_test",
+       "matching_condition":"CONTAINS",
+       "matching_strings": "/login",
+       "priority":"8"
+      }
+    ],
+
+    "java_servlet_rules": [
+      {
+      
+       "rule_name": "LogonServlet_test",
+       "matching_condition":"MATCHES_REGEX",
+       "matching_strings": "^user.*(\/login)$",
+       "priority":"7"
+      }
+    ]   
+
    }
