--- a/Setup/Applications/ConfigMyApp/Workflows/ConfigMyAppBuildWorkflow.yaml
+++ b/Setup/Applications/ConfigMyApp/Workflows/ConfigMyAppBuildWorkflow.yaml
@@ -32,9 +32,7 @@ phases:
           echo \"remote\"\ngit config remote.origin.url https://github.com/Appdynamics/ConfigMyApp.git\n\
           echo \"Cloning repo...\" \ngit config --global credential.helper cache\n\
           git clone https://AlexJov:fa64a47df9c0fc8ae6bbff0c77d7ffea14737e24@github.com/Appdynamics/ConfigMyApp.git\
-          \ -b features/jenkins_pipeline --single-branch ConfigMyApp\necho \"Cloned\"\
-          \nls\nwhoami\nls ./ConfigMyApp\necho \"Execute script...\"\ncat ./ConfigMyApp/config.json\n\
-          ./ConfigMyApp/configMyApp.sh TPV no no dev\necho \"Done.\""
+          \ -b features/jenkins_pipeline --single-branch ConfigMyApp\necho \"Cloned\""
         scriptType: BASH
         sshKeyRef: null
         sweepingOutputName: null
