Harness IO Git Sync. MODIFY: Setup/Applications/ConfigMyApp/Workflows/ConfigMyAppBuildWorkflow.yaml

--- a/Setup/Applications/ConfigMyApp/Workflows/ConfigMyAppBuildWorkflow.yaml
+++ b/Setup/Applications/ConfigMyApp/Workflows/ConfigMyAppBuildWorkflow.yaml
@@ -44,7 +44,7 @@ phases:
         templateVersion: null
         timeoutMillis: 60000
     - type: SHELL_SCRIPT
-      name: Shell Script_2
+      name: Execute script
       properties:
         commandPath: null
         connectionAttributes: null
@@ -53,7 +53,7 @@ phases:
         outputVars: ''
         publishAsVar: false
         scriptString: |-
-          echo "Execute script"
+          echo "Start - Execute script"
           ls
           whoami
           ls ./ConfigMyApp
@@ -67,7 +67,9 @@ phases:
         sweepingOutputScope: null
         tags: null
         templateExpressions: null
-        templateVariables: ''
+        templateUuid: null
+        templateVariables: null
+        templateVersion: null
         timeoutMillis: 60000
     stepsInParallel: false
   - type: WRAP_UP
