--- a/integrations/Jenkins/Dockerfile
+++ b/integrations/Jenkins/Dockerfile
@@ -1,7 +1,8 @@
 FROM jenkinsci/blueocean:latest
 USER root
 # install dependencies
-RUN apk add --update jq
+RUN apk add --update jq; \
+    chmod -R 777 /var
 # copy docker configuration
 COPY docker.conf /etc/init.d/docker
 # good practice to not run as root
