--- a/integrations/Jenkins/docker-compose.yaml
+++ b/integrations/Jenkins/docker-compose.yaml
@@ -2,6 +2,7 @@ version: '2'
 services:
   jenkins-service:
     container_name: jenkinsservice
+    privileged: true
     build: .
     ports:
       - 8080:8080
