Mount volumes - bt config;

--- a/kubernetes/configmyapp-appd-config.yaml
+++ b/kubernetes/configmyapp-appd-config.yaml
@@ -5,7 +5,7 @@ data:
   CMA_INCLUDE_SIM: "true"
   CMA_USE_HTTPS: "false"
   # optional parameters
-  #CMA_CONFIGURE_BT: 'true'
+  CMA_CONFIGURE_BT: "true"
   #CMA_DATABASE_NAME: ConfigMyApp
   #CMA_INCLUDE_DATABASE: "true"
   #CMA_OVERWRITE_HEALTH_RULES: "true"
