--- a/kubernetes/all-scenerios-combined.yaml
+++ b/kubernetes/all-scenerios-combined.yaml
@@ -4,26 +4,35 @@ metadata:
   creationTimestamp: null
   labels:
     run: configmyapp
-  name: configmyapp-br
+  name: configmyapp-all
 spec:
   volumes:
+    - name: bt-volume
+      configMap:
+        name: bt-config
     - name: branding-volume
       hostPath:
         path: /home/docker/branding
   containers:
-  - image: iogbole/configmyapp:latest
+  - image: appdynamicscx/configmyapp:latest
     name: configmyapp
-    resources: {}
+    imagePullPolicy: Always
+    resources: 
+      limits:
+        cpu: 200m
+        memory: 500M
+      requests:
+        cpu: 100m
+        memory: 300M
     volumeMounts:
       - mountPath: /opt/configmyapp/branding
         name: branding-volume
+      - mountPath: /opt/configmyapp/bt_config/configBT.json
+        name: bt-volume
+        subPath: configBT.json
     env:
     - name: CMA_APPLICATION_NAME
       value: API_Gateway
-    - name: CMA_CONTROLLER_HOST
-      value: configmyappdemo-2044no-uzyczrm0.appd-cx.com
-    - name: CMA_USERNAME
-      value: appd
     - name: CMA_PASSWORD
       valueFrom: 
         secretKeyRef:
