--- a/kubernetes/cma-configmap.yaml
+++ b/kubernetes/cma-configmap.yaml
@@ -4,10 +4,14 @@ data:
   CMA_CONTROLLER_PORT: "8090"
   CMA_INCLUDE_SIM: "true"
   CMA_USE_HTTPS: "false"
+  CMA_CONTROLLER_HOST: "configmyappdemo-2044no-uzyczrm0.appd-cx.com"
+  CMA_USERNAME: appd
+
   # optional parameters
   #CMA_CONFIGURE_BT: "true"
   #CMA_USE_BRANDING: "true"
   #CMA_LOGO_NAME: "logo-debug.jpeg"
+  #CMA_BACKGROUND_NAME: "bg.png"
   #CMA_DATABASE_NAME: ConfigMyApp
   #CMA_INCLUDE_DATABASE: "true"
   #CMA_OVERWRITE_HEALTH_RULES: "true"
@@ -15,6 +19,7 @@ data:
   #CMA_PROXY_URL: localhost
   #CMA_USE_ENCODED_CREDENTIALS: "false"
   #CMA_USE_PROXY: "false"
+  #CMA_BT_ONLY
 kind: ConfigMap
 metadata:
   creationTimestamp: null
