--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: "ConfigMyApp"
-description: "description"
+description: AppDynamics configuration as code tool"
 # remote_theme: pmarsceill/just-the-docs
 remote_theme: rundocs/jekyll-rtd-theme
 
@@ -18,7 +18,7 @@ copyright:
   revision: false # is show the revision
   
 docker_url: 'https://hub.docker.com/r/appdynamicscx/configmyapp'
-#addons: false 
+addons: false 
 addons:
   - github
   - analytics
