--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: "AppDynamics ConfigMyApp"
+title: "ConfigMyApp"
 description: AppDynamics configuration as code tool"
 # remote_theme: pmarsceill/just-the-docs
 remote_theme: rundocs/jekyll-rtd-theme
