--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: "ConfigMyApp"
-description: AppDynamics configuration as code tool"
+title: "AppDynamics ConfigMyApp"
+description: "Configuration as code tool"
 # remote_theme: pmarsceill/just-the-docs
 remote_theme: rundocs/jekyll-rtd-theme
 
