Add action suppression upload from file; Typos;

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@ Setup/Applications/*
 zz_demoflow*
 business_transactions/uploaded/*
 api_actions/uploaded/*.json
+api_actions/filesToUpload/*.json
