--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,9 @@ description: "Configuration as code tool"
 # remote_theme: pmarsceill/just-the-docs
 remote_theme: rundocs/jekyll-rtd-theme
 
-baseurl: '/ConfigMyApp'
-url: ''
+#baseurl: '/ConfigMyApp'
+#url: ''
+
 fluid: true
 #logo: "logo.png"
 
