--- a/config.json
+++ b/config.json
@@ -1,6 +1,8 @@
 {
   "overwrite_health_rules": true,
   "are_passwords_encoded": false,
+  "upload_custom_dashboards": false,
+
   "branding": [
     {
       "enabled": true,
