Action suppression bugfix missing functions and folders; Save uploaded actions;

--- a/.gitignore
+++ b/.gitignore
@@ -13,4 +13,5 @@ Setup/Applications/*
 .vscode/*
 zz_demoflow*
 business_transactions/uploaded/*
-api_actions/uploaded/*.json
+api_actions/uploaded/*.json*
+api_actions/actions/*.json*
