--- a/.github/workflows/QAConfigMyApp.yml
+++ b/.github/workflows/QAConfigMyApp.yml
@@ -35,16 +35,23 @@ jobs:
           ./start.sh -a Jenkins_API -c configmyappdemo-2044no-uzyczrm0.appd-cx.com -p appd -u appd 
           
     - name: TestCase2- BT_ONLY
+      env:
+        CMA_USE_HTTPS: false
       run: |
           echo Running BT_ONLY,
           ./start.sh -a Jenkins_API -c configmyappdemo-2044no-uzyczrm0.appd-cx.com -p appd -u appd --bt-only
           
-    - name: TestCase3- Action suppression
+    - name: TestCase3- Action suppression.Default
       run: |
           echo Running Action Suppression,
           ./start.sh -a Jenkins_API -c configmyappdemo-2044no-uzyczrm0.appd-cx.com -p appd -u appd --suppress-action
           
-    - name: TestCase4- SIM and DB
+    - name: TestCase4- Action suppression. Date and duration 
+      run: |
+          echo Running Action Suppression,
+          ./start.sh -a Jenkins_API -c configmyappdemo-2044no-uzyczrm0.appd-cx.com -p appd -u appd --suppress-action --suppress-start=$(date -u +%FT%T) --suppress-duration=120
+          
+    - name: TestCase5- SIM and DB
       run: |
           echo Running SIM and DB,
           ./start.sh -a IoT_API -c configmyappdemo-2044no-uzyczrm0.appd-cx.com -p appd -u appd  --include-database  --database-name 'ConfigMyApp'  --include-sim
