--- a/.github/workflows/QAConfigMyApp.yml
+++ b/.github/workflows/QAConfigMyApp.yml
@@ -49,7 +49,7 @@ jobs:
     - name: TestCase4- Action suppression. Date and duration 
       run: |
           echo Running Action Suppression,
-          ./start.sh -a Jenkins_API -c configmyappdemo-2044no-uzyczrm0.appd-cx.com -p appd -u appd --suppress-action --suppress-start=$(date -u +%FT%T) --suppress-duration=120
+          ./start.sh -a Jenkins_API -c configmyappdemo-2044no-uzyczrm0.appd-cx.com -p appd -u appd --suppress-action --suppress-start=$(date -d " + 5 minutes" -u  +%FT%T) --suppress-duration=120
           
     - name: TestCase5- SIM and DB
       run: |
