Feature/Upload custom dashboards (#36)

--- a/config.json
+++ b/config.json
@@ -1,6 +1,8 @@
 {
   "overwrite_health_rules": false,
   "are_passwords_encoded": false,
+  "upload_custom_dashboard": false,
+
   "branding": [
     {
       "enabled": true,
