Add health rule vars to docker env and k8s configMap;

--- a/kubernetes/cma-configmap.yaml
+++ b/kubernetes/cma-configmap.yaml
@@ -14,12 +14,21 @@ data:
   #CMA_BACKGROUND_NAME: "bg.png"
   #CMA_DATABASE_NAME: ConfigMyApp
   #CMA_INCLUDE_DATABASE: "true"
-  #CMA_OVERWRITE_HEALTH_RULES: "true"
   #CMA_PROXY_PORT: "8080"
   #CMA_PROXY_URL: localhost
   #CMA_USE_ENCODED_CREDENTIALS: "false"
   #CMA_USE_PROXY: "false"
   #CMA_BT_ONLY
+  #CMA_HEALTH_RULES_ONLY: "false"
+  #CMA_HEALTH_RULES_OVERWRITE: "true"
+  #CMA_HEALTH_RULES_DELETE
+  #CMA_SUPPRESS_ACTION=false
+  #CMA_SUPPRESS_START=2020-01-31T12:00:00+0000
+  #CMA_SUPPRESS_DURATION=60
+  #CMA_SUPPRESS_NAME="Action Suppression"
+  #CMA_SUPPRESS_UPLOAD_FILES=false
+  #CMA_SUPPRESS_DELETE=false
+
 kind: ConfigMap
 metadata:
   creationTimestamp: null
