--- a/.github/workflows/QAConfigMyApp.yml
+++ b/.github/workflows/QAConfigMyApp.yml
@@ -5,7 +5,7 @@ name: ConfigMyAppCI
 # Controls when the action will run. Triggers the workflow on push or pull request
 on:
   push:
-    branches: [ master, develop ]
+    branches: [ master, develop, features/health-rules-only ]
   pull_request:
     branches: [ master, develop ]
 
@@ -63,6 +63,54 @@ jobs:
           curl https://gist.githubusercontent.com/iogbole/48e7568454b066132700c4fe039c2cff/raw/4aa417193e7ce9f3cce2410e67d525761cb6d678/gistfile1.txt -o ./custom_dashboards/CustomDashboard_vanilla.json
           export CMA_UPLOAD_CUSTOM_DASHBOARD=true
           ./start.sh -a IoT_API -c configmyappdemo-2044no-uzyczrm0.appd-cx.com -p appd -u appd
+
+    - name: TestCase7- health rules only - no overwrite - parameters
+      env:
+        CMA_USE_HTTPS: false
+      run: |
+          echo Running health rules only, get values from runtime parameters,
+          ./start.sh -a Jenkins_API -c configmyappdemo-2044no-uzyczrm0.appd-cx.com -p appd -u appd --health-rules-only --no-health-rules-overwrite
+
+    - name: TestCase8- health rules only - overwrite - env variables
+      env:
+        CMA_USE_HTTPS: false
+        CMA_HEALTH_RULES_OVERWRITE: true
+        CMA_HEALTH_RULES_ONLY: true
+      run: |
+          echo Running health rules only, get values from environment variables,
+          ./start.sh -a Jenkins_API -c configmyappdemo-2044no-uzyczrm0.appd-cx.com -p appd -u appd
+
+    - name: TestCase9- health rules only - overwrite default - config
+      env:
+        CMA_USE_HTTPS: false
+      run: |
+          cp config.json config.json.bkp
+          curl https://gist.githubusercontent.com/AlexJov/63ccb17421208679ef63b55afafea712/raw/b8e5ebc5399a8d7df5422ff07c49c892f0c3bd63/config.json -o ./config.json
+          echo Running health rules only, get values from config,
+          ./start.sh -a Jenkins_API -c configmyappdemo-2044no-uzyczrm0.appd-cx.com -p appd -u appd
+          cp config.json.bkp config.json
+
+    - name: TestCase10- health rules only - import custom health rules (to delete)
+      env:
+        CMA_USE_HTTPS: false
+      run: |
+          curl https://gist.githubusercontent.com/AlexJov/d65f5e436bd54dd53aaad679f6b8d8e9/raw/57f3d2ec115f7411944b934c735f57a6a276d44b/Agent%2520Availability%2520to%2520Delete.json -o ./health_rules/Application/AgentAvailabilityToDelete.json
+          echo Running health rules only, import additional health rules,
+          ./start.sh -a Jenkins_API -c configmyappdemo-2044no-uzyczrm0.appd-cx.com -p appd -u appd --health-rules-only
+
+    - name: TestCase11- delete health rules, existing,
+      env:
+        CMA_USE_HTTPS: false
+      run: |
+          echo Delete health rules, delete health rules from TestCase10,
+          ./start.sh -c http://configmyappdemo-2044no-uzyczrm0.appd-cx.com/ -a Jenkins_API -u appd -p appd --health-rules-delete "Agent Availability to Delete"
+
+    - name: TestCase12- delete health rules, non existing
+      env:
+        CMA_USE_HTTPS: false
+      run: |
+          echo Delete health rules, delete health rules from TestCase10,
+          ./start.sh -c http://configmyappdemo-2044no-uzyczrm0.appd-cx.com/ -a Jenkins_API -u appd -p appd --health-rules-delete "There is no this rule name"
           
           
           
