Update delete HR test case - delete multiple;

--- a/.github/workflows/QAConfigMyApp.yml
+++ b/.github/workflows/QAConfigMyApp.yml
@@ -90,22 +90,20 @@ jobs:
           ./start.sh -a Jenkins_API -c configmyappdemo-2044no-uzyczrm0.appd-cx.com -p appd -u appd
           cp config.json.bkp config.json
 
-    - name: TestCase10- health rules only - import custom health rules (to delete)
+    - name: TestCase10- delete health rules, existing,
       env:
         CMA_USE_HTTPS: false
       run: |
           curl https://gist.githubusercontent.com/AlexJov/d65f5e436bd54dd53aaad679f6b8d8e9/raw/57f3d2ec115f7411944b934c735f57a6a276d44b/Agent%2520Availability%2520to%2520Delete.json -o ./health_rules/Application/AgentAvailabilityToDelete.json
+          curl https://gist.githubusercontent.com/AlexJov/03317fd4271325fbd6678dded2df6e91/raw/bb33a4b3abcaed762f1a5b262586183c6efd4402/CpuUtilisationTooHighToDelete.json -o ./health_rules/Server/CpuUtilisationTooHighToDelete.json
+          
           echo Running health rules only, import additional health rules,
           ./start.sh -a Jenkins_API -c configmyappdemo-2044no-uzyczrm0.appd-cx.com -p appd -u appd --health-rules-only
 
-    - name: TestCase11- delete health rules, existing,
-      env:
-        CMA_USE_HTTPS: false
-      run: |
           echo Delete health rules, delete health rules from TestCase10,
-          ./start.sh -c http://configmyappdemo-2044no-uzyczrm0.appd-cx.com/ -a Jenkins_API -u appd -p appd --health-rules-delete "Agent Availability to Delete"
+          ./start.sh -c http://configmyappdemo-2044no-uzyczrm0.appd-cx.com/ -a Jenkins_API -u appd -p appd --health-rules-delete "Agent Availability to Delete, Server Health: CPU Utilisation is too high to Delete"
 
-    - name: TestCase12- delete health rules, non existing
+    - name: TestCase11- delete health rules, non existing
       env:
         CMA_USE_HTTPS: false
       run: |
